force-app/main/default/objects/Employee__c/fields/Employee_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Employee_Address_2__c</fullName>
    <label>Employee Address 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>