force-app/main/default/objects/Employee__c/fields/Employee_Phone_Cell__c.field-meta.xml
<CustomField>
    <fullName>Employee_Phone_Cell__c</fullName>
    <label>Employee Phone - Cell</label>
    <type>Phone</type>
</CustomField>