force-app/main/default/objects/Employee__c/fields/Employee_Phone_Other__c.field-meta.xml
<CustomField>
    <fullName>Employee_Phone_Other__c</fullName>
    <label>Employee Phone - Other</label>
    <type>Phone</type>
</CustomField>