force-app/main/default/objects/Employee__c/fields/GL_Account_Variable_2__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>GL Account Variable 2</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Employees (This GLV2)</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>