force-app/main/default/objects/Employee__c/fields/GL_Account_Variable_3__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_3__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Trade</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Trade must be an Accounting Variable of type GL Account Variable 3.</errorMessage>
        <filterItems>
            <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>GL Account Variable 3</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Employees (Trade)</relationshipLabel>
    <relationshipName>Employees_GLV3</relationshipName>
    <type>Lookup</type>
</CustomField>