force-app/main/default/objects/Employee__c/fields/Is_Rigger__c.field-meta.xml
<CustomField>
    <fullName>Is_Rigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Rigger</label>
    <type>Checkbox</type>
</CustomField>